Manual user commit to clear stage
